erDiagram
    MEMBER ||--o{ DRAFT : owns
    MEMBER ||--o{ DRAFT_COLLABORATOR : receives
    DRAFT ||--o{ DRAFT_COLLABORATOR : shares_with
    DRAFT ||--o{ DRAFT_SNAPSHOT : stores
    MEMBER ||--o{ ASSISTANT_RUN : triggers
    DRAFT ||--o{ ASSISTANT_RUN : references

    MEMBER {
        int id
        string email
        string display_name
        string focus_area
        string color_hex
    }

    DRAFT {
        int id
        string title
        string brief
        text content
        string stage
        string accent
        int owner_id
        datetime created_at
        datetime updated_at
    }

    DRAFT_COLLABORATOR {
        int id
        int draft_id
        int member_id
        string role
    }

    DRAFT_SNAPSHOT {
        int id
        int draft_id
        string label
        text content
        datetime created_at
    }

    ASSISTANT_RUN {
        int id
        int draft_id
        int member_id
        string feature
        text selection_text
        text result_text
        string decision
        datetime created_at
    }
